--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
 
                 <div class="botoes">
 
-                    <!--Creates the popup body-->
-                    <div class="popup-overlay">
-                        <!--Creates the popup content-->
-                        <div class="popup-content">
-                            <!--popup's close button-->
-                            <button class="close">fechar</button>
-                        </div>
-                    </div>
+                    <button role="button" class="botao">
+                        <i class="fa-solid fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
 
-                    <div class="open">
-                        <button role="button" class="botao">
-                            <i class="fa-solid fa-play"></i>
-                            ASSISTIR AGORA
-                        </button>
-                    </div>
 
                     <button role="button" class="botao">
                         <i class="fa-solid fa-circle-info"></i>
                         MAIS INFORMAÇÕES
                     </button>
+
+                    <!--Creates the popup body-->
+                    <!-- <div class="popup-overlay"> -->
+                    <!--Creates the popup content-->
+                    <!-- <div class="popup-content"> -->
+                    <!--popup's close button-->
+                    <!-- <button class="close">fechar</button> -->
                 </div>
+
+
             </div>
+        </div>
         </div>
         </div>
     </main>
