--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="./style/main.css">
     <!-- responsividade -->
-    <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="./style/responsive.css">
     <!-- owl css -->
-    <link rel="stylesheet" href="/style/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="/style/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
 
 
     <title>Clone do Netflix</title>
@@ -69,42 +69,42 @@
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img src="/img/mini1.jpg" alt="" srcset="">
+                <img src="./img/mini1.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini2.jpg" alt="" srcset="">
+                <img src="./img/mini2.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini3.jpg" alt="" srcset="">
+                <img src="./img/mini3.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini4.jpg" alt="" srcset="">
+                <img src="./img/mini4.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini5.jpg" alt="" srcset="">
+                <img src="./img/mini5.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini6.jpg" alt="" srcset="">
+                <img src="./img/mini6.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini7.jpg" alt="" srcset="">
+                <img src="./img/mini7.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini8.jpg" alt="" srcset="">
+                <img src="./img/mini8.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini9.jpg" alt="" srcset="">
+                <img src="./img/mini9.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini10.jpg" alt="" srcset="">
+                <img src="./img/mini10.jpg" alt="" srcset="">
             </div>
 
         </div>
     </div>
     <script src="https://kit.fontawesome.com/92d87eaa91.js" crossorigin="anonymous"></script>
-    <script src="/js/owl/jquery.min.js"></script>
-    <script src="/js/owl/owl.carousel.min.js"></script>
-    <script src="/js/setup.js"></script>
+    <script src="./js/owl/jquery.min.js"></script>
+    <script src="./js/owl/owl.carousel.min.js"></script>
+    <script src="./js/setup.js"></script>
 </body>
 
 </html>
